--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -1,9 +1,7 @@
 *, *:before, *:after
   box-sizing: border-box
-html
-  font-size: 16px
 body 
-  font-family: 'Futura Book', sans-serif
+  font-family: 'Point', sans-serif
   font-size: 1rem
 a:active, a:focus 
   outline: none
@@ -17,7 +15,6 @@ button:active, button:focus
   outline: none
 a 
   text-decoration: none 
-  color: #ffffff
 h1, h2, h3, h4, h5, ul
   padding: 0
   margin: 0
