--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,11 +1,10 @@
 @import 'libs'
-@import 'fonts'
 @import 'settings'
 @import 'grid'
-@import 'variables'
 @import 'interface'
+@import 'templates/nav'
 @import 'templates/header'
-@import 'templates/hero'
-@import 'templates/footer'
-
-@import 'media'
+@import 'templates/company'
+@import 'templates/technology'
+@import 'templates/advantage'
+@import 'templates/catalog'
