--- a/src/sass/_settings.sass
+++ b/src/sass/_settings.sass
@@ -2,7 +2,7 @@
   box-sizing: border-box
 body 
   font-family: 'Point', sans-serif
-  font-size: 1rem
+  line-height: 1.5
 a:active, a:focus 
   outline: none
 input, textarea 
@@ -20,3 +20,7 @@ h1, h2, h3, h4, h5, ul
   margin: 0
 li 
   list-style: none
+p 
+  margin-top: 0
+  &:last-child
+    margin-bottom: 0
