--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -1,152 +1,21 @@
-.header 
-    position: fixed
-    display: block
-    width: 100%
-    background: rgba(0,0,0,0.3)
-    z-index: 999
-    padding: 30px 50px
-    top: 0
-.menu__list 
-    display: flex
-    justify-content: center
-.menu__list li 
-    margin-left: 20px
-.menu__link 
-    display: block
-    margin: auto
-    padding: 1rem 1.25rem
-    font-family: sans-serif
-    font-size: 1.5rem
-    text-decoration: none
-    color: white
-    position: relative
-    transition: all .3s cubic-bezier(.2, 0, 0, 1)
-    z-index: 1
-    margin-bottom: 25px
-    &:after 
-        content: ''
-        display: block
-        height: 2px
-        position: absolute
-        bottom: 0
-        right: 1.25rem
-        left: 1.25rem
-        background-color: #ffffff
-        transition: all .3s cubic-bezier(.2, 0, 0, 1)
-        transform-origin: bottom center
-        z-index: -1
-    &:hover 
-        color: #2D2D2D
-        &:after 
-            right: 0
-            left: 0
-            height: 100%
-        
-
 #main 
     background: url('../img/main-bg.jpg') no-repeat
     background-size: cover 
     background-attachment: fixed
-#company 
-    position: relative
-    background: url('../img/company-bg.jpg') no-repeat
-    background-size: cover 
-    background-position-y: bottom
-#technology 
-    position: relative
-    background: url('../img/technology-bg.jpg') no-repeat
-    background-size: cover 
-    background-position-y: bottom
-#advantage 
-    position: relative
-    background: url('../img/advantage-bg.jpg') no-repeat
-    background-size: cover 
-    background-position-y: top
-
-.section__logo 
-    width: 350px
-    img 
-        width: 100%
 
 .main 
     background-color: rgba(0,0,0,0.15)
-    margin-top: -90px
+    font-size: 1rem
+    margin-top: -5.6rem
     width: 100%
     height: 100vh
     display: flex
     flex-direction: column
     justify-content: center
     align-items: center
-
-.company__content 
-    position: absolute
-    background-color: #ffffff
-    top: 0
-    left: 0
-    bottom: 0
-    width: 50%
-    height: 100vh
-    padding: 90px 60px 60px 60px
-    clip-path: circle(100% at 0 50%)
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-
-.technology__content 
-    position: absolute
-    background-color: #ffffff
-    top: 0
-    right: 0
-    bottom: 0
-    width: 50%
-    height: 100vh
-    padding: 90px 60px 60px 60px
-    clip-path: circle(100% at 100% 50%)
-    display: flex
-    flex-direction: column
-    justify-content: space-between
-    align-items: flex-end
-
-.section__text 
-    font-size: calc(5px + 18 * (100vw / 1700))
-    width: 80%
-    font-weight: 300
-    line-height: 1.6
-
-.technology__content > .section__text 
-    text-align: right
-
-.section__title
-    text-transform: uppercase
-    color: #fc961d
-    font-size: 30px
-    margin-bottom: 50px
-    font-weight: bold
-
-.title--center 
-    text-align: center
-
-.advantage__list 
-    display: flex
-    flex-wrap: wrap
-    justify-content: center
-    
-.advantage-item 
-    position: relative
-    width: 300px
-    height: 207px
-    background: url('../img/item.png') no-repeat
-    display: flex
-    justify-content: center
-    align-items: center
-    padding-bottom: 40px 
-    margin: 20px 10px 20px 10px
-
-    
-.advantage-item__text
-    width: 120px
-    text-align: center
-    color: #ffffff
-    font-weight: 300
-    font-size: 16px
-
+    &__body 
+        width: 45.4em
+        img 
+            width: 100%
+    @media ( max-width: 1430px )
+        font-size: 0.7rem
