--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -44,3 +44,9 @@
             border-bottom: 2px solid #fc961d
         @media ( max-width: 1430px )
             font-size: 1.07rem
+    &__logo 
+        width: 21em
+        img 
+            width: 100%
+        @media ( max-width: 1430px )
+            font-size: 0.8rem
