--- a/src/sass/templates/_catalog.sass
+++ b/src/sass/templates/_catalog.sass
@@ -37,6 +37,7 @@
         background-color: #ffffff
     &__title
         position: absolute
+        top: 1.358em
         font-size: 2.3rem
         color: rgb(255, 255, 255)
         line-height: 0.741
@@ -61,7 +62,7 @@
         font-size: 1rem
         display: flex
         flex-wrap: wrap
-        margin-top: 7.875em
+        margin-top: 9.875em
         margin-left: 2.8em
         margin-right: 4.375em
         @media ( max-width: 1400px )
