--- a/src/sass/templates/_advantage.sass
+++ b/src/sass/templates/_advantage.sass
@@ -1,47 +1,106 @@
 #advantage 
     position: relative
     background: url('../img/advantage-bg.jpg') no-repeat
-    background-size: cover 
+    background-size: 100%
     background-position-y: top
+.advantage__title.blue
+    background-color: #BD49D2
 
 .advantage
+    &__content
+        font-size: 1rem
+        width: 100%
+        padding: 3.125em
+        position: absolute
+        top: 50%
+        bottom: 0
+        background-color: #ffffff
+        display: flex
+        flex-direction: column
+        justify-content: space-around
+        @media ( max-width: 1740px )
+            font-size: 0.5rem
+    &__title
+        position: absolute
+        top: -50%
+        transform: translateY(-50%)
+        right: 50%
+        transform: translateX(50%)
+        font-size: 2.3rem
+        color: rgb(255, 255, 255)
+        line-height: 0.741
+        letter-spacing: 0.27em
+        text-transform: uppercase
+        font-weight: 300
+        color: #ffffff
+        background-color: #fc961d
+        padding: 0.4em 0.4em 0.27em 0.675em
+        @media ( max-width: 1660px )
+            font-size: 1.8rem
+        @media ( max-width: 1300px )
+            font-size: 1.5rem
+        @media ( max-width: 1090px )
+            font-size: 1.3rem
     &__list 
         display: flex
         flex-wrap: wrap
         justify-content: center
-    &__wrapper
-        position: absolute
-        bottom: 0
-        left: 0
-        background: url('../img/advantage-circle.png') no-repeat
-        width: 800px
-        background-size: cover 
-        padding: 70px 60px 60px 60px
     &__text 
+        text-align: center
         font-size: 1.1rem
-        max-width: 70%
-        max-height: 85%
-        overflow: auto
-        padding-right: 0.5em
         font-weight: 300
+        @media ( max-width: 1740px )
+            font-size: 1rem
     &-item 
         font-size: 1rem
         position: relative
         width: 15.75em
         height: 10.90em
-        background: url('../img/item.png') no-repeat
-        background-size: cover
+        background-color: #ffffff
         display: flex
         justify-content: center
         align-items: center
-        padding-bottom: 2.5em 
         margin: 1.25em 0.625em
+        outline: 2px solid #BD49D2
+        transition: all 0.3s
+        &:hover
+            transform: translateY(-10px)
+            background-color: #BD49D2
+            .advantage-item__text 
+                color: #ffffff
+                &::before
+                    background-color: #ffffff
+                    width: 60%
         &__text
-            width: 7.5em
+            font-size: 1rem
+            position: relative
+            text-transform: uppercase
+            color: rgba(0,0,0,0.8)
+            font-size: 1rem
+            font-weight: 300
+            letter-spacing: 3px
+            line-height: 1.5
             text-align: center
-            color: #ffffff
-            font-size: 0.8rem
-            @media ( max-width: 1400px )
-                font-size: 0.7rem
-        @media ( max-width: 1400px )
-            font-size: 0.8rem
+            &::before
+                font-size: 1rem
+                transition: all 0.3s
+                content: ''
+                position: absolute
+                bottom: -0.9375em
+                left: 50%
+                transform: translateX(-50%)
+                width: 25%
+                height: 1.5px
+                background-color: #fc961d
+            @media ( max-width: 1740px )
+                font-size: 0.8rem
+            @media ( max-width: 1360px )
+                font-size: 0.65rem
+            @media ( max-width: 1200px )
+                font-size: 0.55rem
+        @media ( max-width: 1740px )
+            font-size: 0.75rem
+        @media ( max-width: 1360px )
+            font-size: 0.65rem
+        @media ( max-width: 1200px )
+            font-size: 0.55rem
