--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -12,7 +12,7 @@
         background-color: #ffffff
         width: 50%
         height: 100%
-        padding: 10em 3.75em 3.75em 4.375em
+        padding: 12em 3.75em 3.75em 4.375em
         display: flex
         flex-direction: column
         justify-content: space-between
@@ -20,7 +20,7 @@
             font-size: 0.7rem
     &__title
         position: absolute
-        top: 0
+        top: 1.8em
         right: 0
         font-size: 2.3rem
         color: rgb(255, 255, 255)
