--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -1,14 +1,13 @@
 #main 
     background: url('../img/main-bg.jpg') no-repeat
     background-size: cover 
-    background-attachment: fixed
+    // background-attachment: fixed
 
 .main 
     background-color: rgba(0,0,0,0.15)
     font-size: 1rem
-    margin-top: -5.6rem
     width: 100%
-    height: 100vh
+    height: 100%
     display: flex
     flex-direction: column
     justify-content: center
