--- a/src/sass/templates/_technology.sass
+++ b/src/sass/templates/_technology.sass
@@ -13,7 +13,7 @@
         width: 50%
         height: 100%
         margin-left: 50%
-        padding: 10em 3.75em 3.75em 4.375em
+        padding: 12em 3.75em 3.75em 4.375em
         display: flex
         flex-direction: column
         justify-content: space-between
@@ -22,7 +22,7 @@
             font-size: 0.7rem
     &__title
         position: absolute
-        top: 0
+        top: 1.8em
         left: 0
         font-size: 2.3rem
         color: rgb(255, 255, 255)
