--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -1,7 +1,6 @@
 #main 
     background: url('../img/main-bg.jpg') no-repeat
     background-size: cover 
-    // background-attachment: fixed
 
 .main 
     background-color: rgba(0,0,0,0.15)
@@ -18,3 +17,7 @@
             width: 100%
     @media ( max-width: 1430px )
         font-size: 0.7rem
+    @media ( max-width: 910px )
+        font-size: 0.5rem
+    @media ( max-width: 570px )
+        font-size: 0.4rem
