--- a/src/sass/templates/_catalog.sass
+++ b/src/sass/templates/_catalog.sass
@@ -1,30 +1,32 @@
 #catalog
     position: relative
     background: url('../img/catalog/catalog-bg-left.jpg') no-repeat
-    background-size: 26%
-    background-position-y: center
+    background-size: contain
+    background-position-y: top
+    @media ( max-width: 830px )
+        background: none
 
 #catalog-2
     position: relative
     background: url('../img/catalog/catalog-2-bg-left.jpg') no-repeat
-    background-size: 26%
-    background-position-y: center
+    background-size: contain
+    background-position-y: top
 .catalog__title.red
     background-color: #FF104B
 
 #catalog-3
     position: relative
     background: url('../img/catalog/catalog-3-bg-left.jpg') no-repeat
-    background-size: 26%
-    background-position-y: center
+    background-size: contain
+    background-position-y: top
 .catalog__title.green
     background-color: #6CA800
 
 #catalog-4
     position: relative
     background: url('../img/catalog/catalog-4-bg-left.jpg') no-repeat
-    background-size: 26%
-    background-position-y: center
+    background-size: contain
+    background-position-y: top
 .catalog__title.tomat
     background-color: #D80001
 
@@ -33,8 +35,14 @@
         position: relative
         display: flex
         flex-direction: column
-        margin-left: 26%
+        margin-left: 25%
         background-color: #ffffff
+        height: 100%
+        justify-content: center
+        @media ( max-width: 1300px )
+            margin-left: 20%
+        @media ( max-width: 830px )
+            margin-left: 0%
     &__title
         position: absolute
         top: 1.358em
@@ -56,20 +64,31 @@
             background-size: cover
             width: 5.8em
             height: 1.32em
-        @media ( max-width: 1400px )
+            @media ( max-width: 980px )
+                display: none
+        @media ( max-width: 1750px )
             font-size: 2rem
+        @media ( max-width: 830px )
+            font-size: 1.5rem
+            left: 50%
+            transform: translateX(-50%)
+        @media ( max-width: 740px )
+            font-size: 1.2rem
     &__list
         font-size: 1rem
         display: flex
         flex-wrap: wrap
-        margin-top: 9.875em
+        margin-top: 8.3em
         margin-left: 2.8em
         margin-right: 4.375em
-        @media ( max-width: 1400px )
+        justify-content: center
+        @media ( max-width: 1750px )
             font-size: 0.65rem
+        @media ( max-width: 1300px )
+            margin-top: 12.3em
     &-item 
         width: 20.6em
-        margin: 0 2.1em 2em 2.1em
+        margin: 0 1em 2em 1em
         font-size: 1rem
         transition: all 0.3s
         display: flex
@@ -92,9 +111,9 @@
                     &::before
                         transition: width 0.3s
                         width: 50%
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 0.7rem
-        @media ( max-width: 1400px )
+        @media ( max-width: 1750px )
             font-size: 0.75rem
         &__title
             position: relative
@@ -113,20 +132,20 @@
                 width: 0
                 height: 1.5px
                 background-color: #fc961d
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 1.5rem
         &__img
             font-size: 1rem
             width: 13.4em
             img 
                 width: 100%
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 0.65rem
         &__footer
             font-size: 1rem
             display: flex
             margin-top: 1.20em
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 0.6rem
         &__details-btn
             font-size: 1rem
@@ -139,7 +158,7 @@
             transition: all 0.3s
             &:hover
                 background-color: rgba(0,0,0,0.15)
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 0.7rem
         &__order-btn
             font-size: 1rem
@@ -155,5 +174,5 @@
             transition: all 0.3s
             &:hover
                 background-color: #df7f0b
-            @media ( max-width: 1400px )
+            @media ( max-width: 1750px )
                 font-size: 0.8rem
