--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -4,6 +4,8 @@
     background-size: 50%
     background-position-y: center
     background-position-x: right
+    @media ( max-width: 980px )
+        background: none
 
 .company
     &__content 
@@ -18,6 +20,11 @@
         justify-content: space-between
         @media ( max-width: 1430px )
             font-size: 0.7rem
+        @media ( max-width: 980px )
+            width: 100%
+        @media ( max-width: 767px )
+            padding-bottom: 0
+            padding-top: 8em
     &__title
         position: absolute
         top: 1.8em
@@ -33,6 +40,13 @@
         padding: 0.4em 0.4em 0.27em 0.675em
         @media ( max-width: 1430px )
             font-size: 2rem
+        @media ( max-width: 767px )
+            top: 2em
+            right: 50%
+            transform: translateX(50%)
+            font-size: 1.5rem
+        @media ( max-width: 740px )
+            font-size: 1.2rem
     &__text 
         font-size: 1.5rem
         max-height: 80%
@@ -40,7 +54,7 @@
         padding-right: 0.5em
         font-weight: 300
         span 
-            border-bottom: 2px solid #fc961d
+            border-bottom: 1px solid #fc961d
         @media ( max-width: 1430px )
             font-size: 1.07rem
     &__logo 
@@ -49,3 +63,5 @@
             width: 100%
         @media ( max-width: 1430px )
             font-size: 0.8rem
+        @media ( max-width: 1300px )
+            display: none
