--- a/src/sass/templates/_contacts.sass
+++ b/src/sass/templates/_contacts.sass
@@ -15,7 +15,6 @@
         right: 50%
         transform: translateX(50%)
         font-size: 2.3rem
-        color: rgb(255, 255, 255)
         line-height: 0.741
         letter-spacing: 0.27em
         text-transform: uppercase
@@ -30,32 +29,43 @@
         @media ( max-width: 1090px )
             font-size: 1.3rem
     &__body
-        padding: 160px 50px 50px 50px
+        font-size: 1rem
+        padding: 10em 3.125em 3.125em 3.125em
         display: flex
         width: 100%
         height: 100%
         justify-content: center
         align-items: center
-    &__logo
-        width: 400px
-        padding-right: 40px
+        @media ( max-width: 1400px )
+            font-size: 0.8rem
+    &__form
+        font-size: 1rem
+        width: 25em
+        padding-right: 2.5em
         img 
             width: 100%
+        @media ( max-width: 1400px )
+            font-size: 0.8rem
     &__info
-        width: 400px
-        padding-left: 40px
+        width: 25em
+        padding-left: 2.5em
+        @media ( max-width: 1400px )
+            font-size: 0.8rem
     &__address
         padding-bottom: 15px
         position: relative
         &::before
             content: ''
+            font-size: 1rem
             position: absolute
-            top: 12px
-            left: -25px
+            top: 0.75em
+            left: -1.56em
             background: url('../img/map.svg') no-repeat
             background-size: cover
-            width: 18px
-            height: 18px
+            width: 1.125em
+            height: 1.125em
+            @media ( max-width: 1400px )
+                font-size: 0.8rem
         address 
             font-style: normal
             text-transform: uppercase
@@ -64,6 +74,8 @@
             font-weight: 300
             letter-spacing: 5px
             line-height: 1.2
+            @media ( max-width: 1400px )
+                font-size: 0.85rem
     &__tel
         position: relative
         padding-bottom: 15px
@@ -74,13 +86,16 @@
         line-height: 1
         &::before
             content: ''
+            font-size: 1rem
             position: absolute
             top: 0
-            left: -25px
+            left: -1.56em
             background: url('../img/smartphone.svg') no-repeat
             background-size: cover
-            width: 17px
-            height: 17px
+            width: 1.0625em
+            height: 1.0625em
+            @media ( max-width: 1400px )
+                font-size: 0.8rem
         a 
             color: rgba(0,0,0,0.55)
             &:hover
@@ -96,13 +111,16 @@
         line-height: 1.2
         &::before
             content: ''
+            font-size: 1rem
             position: absolute
-            top: 3px
-            left: -25px
+            top: 0.1875em
+            left: -1.56em
             background: url('../img/email.svg') no-repeat
             background-size: cover
-            width: 15px
-            height: 15px
+            width: 0.9375em
+            height: 0.9375em
+            @media ( max-width: 1400px )
+                font-size: 0.8rem
         a 
             color: rgba(0,0,0,0.55)
             &:hover
