--- a/src/sass/templates/_retail.sass
+++ b/src/sass/templates/_retail.sass
@@ -5,6 +5,24 @@
     background-position-y: top
 
 .retail
+    &__text 
+        margin-bottom: 25px
+        text-align: center
+        font-size: 1.1rem
+        font-weight: 300
+        width: 100%
+        display: flex;
+        justify-content: center
+        p 
+            position: relative
+            &::before
+                content: ''
+                position: absolute
+                bottom: -3px
+                left: 0
+                width: 100%
+                height: 1px
+                background-color: #fc961d
     &-slider
         &__prev
             font-size: 1rem
@@ -42,9 +60,11 @@
         background-color: #ffffff
         display: flex
         flex-direction: column
-        justify-content: center
+        justify-content: space-around
         @media ( max-width: 1740px )
             font-size: 0.5rem
+        @media ( max-width: 1300px )
+            position: inherit
     &__list 
         display: flex
         justify-content: center
@@ -58,7 +78,6 @@
         padding: 0 0.5em
         font-weight: 300
         overflow: hidden
-        border: 1px solid #fc961d
         img 
             width: 100%
         @media ( max-width: 1430px )
