--- a/src/sass/templates/_technology.sass
+++ b/src/sass/templates/_technology.sass
@@ -4,6 +4,8 @@
     background-size: 50%
     background-position-y: center
     background-position-x: left
+    @media ( max-width: 980px )
+        background: none
 
 .technology
     &__content 
@@ -20,6 +22,11 @@
         align-items: flex-end
         @media ( max-width: 1430px )
             font-size: 0.7rem
+        @media ( max-width: 980px )
+            margin-left: 0
+            width: 100%
+        @media ( max-width: 767px )
+            padding-top: 8em
     &__title
         position: absolute
         top: 1.8em
@@ -35,6 +42,13 @@
         padding: 0.4em 0.4em 0.27em 0.675em
         @media ( max-width: 1430px )
             font-size: 2rem
+        @media ( max-width: 767px )
+            top: 2em
+            left: 50%
+            transform: translateX(-50%)
+            font-size: 1.5rem
+        @media ( max-width: 740px )
+            font-size: 1.2rem
     &__text 
         font-size: 1.5rem
         max-height: 80%
@@ -49,6 +63,8 @@
             width: 100%
         @media ( max-width: 1430px )
             font-size: 0.8rem
+        @media ( max-width: 1300px )
+            display: none
 
 .technology__content > .technology__text 
     text-align: right
