--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -63,7 +63,6 @@
         color: #ffffff
         text-transform: uppercase
         font-weight: bold
-        border-radius: 7px
         transition: all 0.3s
         &:hover
             background-color: #df7f0b
@@ -84,7 +83,7 @@
         overflow: auto
         &__wrapper
             width: 100%
-            // height: 100%
+            height: 100%
             display: flex
             justify-content: center
             align-items: center
@@ -107,12 +106,15 @@
             justify-content: center
             align-items: center
         &__title
+            font-size: 2rem
+            color: rgb(255, 255, 255)
+            line-height: 0.741
+            letter-spacing: 0.27em
             text-transform: uppercase
-            color: rgba(0,0,0,0.35)
-            font-size: 2.3rem
             font-weight: 300
-            letter-spacing: 5px
-            line-height: 1
+            color: #ffffff
+            background-color: #fc961d
+            padding: 0.4em 0.4em 0.27em 0.675em
         &__img
             display: flex
             justify-content: center
@@ -138,7 +140,6 @@
             color: #ffffff
             text-transform: uppercase
             font-weight: bold
-            border-radius: 7px
             transition: all 0.3s
             &:hover
                 background-color: #df7f0b
@@ -157,7 +158,7 @@
         overflow: auto
         &__wrapper
             width: 100%
-            // height: 100%
+            height: 100%
             display: flex
             justify-content: center
             align-items: center
