--- a/src/sass/templates/_technology.sass
+++ b/src/sass/templates/_technology.sass
@@ -27,6 +27,8 @@
             width: 100%
         @media ( max-width: 767px )
             padding-top: 8em
+            padding-right: 1.75em 
+            padding-left: 1.755em
     &__title
         position: absolute
         top: 1.8em
@@ -43,9 +45,6 @@
         @media ( max-width: 1430px )
             font-size: 2rem
         @media ( max-width: 767px )
-            top: 2em
-            left: 50%
-            transform: translateX(-50%)
             font-size: 1.5rem
         @media ( max-width: 740px )
             font-size: 1.2rem
