--- a/src/sass/templates/_advantage.sass
+++ b/src/sass/templates/_advantage.sass
@@ -1,60 +1,60 @@
 #advantage 
     position: relative
-    background: url('../img/advantage-bg.jpg') no-repeat
-    background-size: 100%
-    background-position-y: top
 .advantage__title.blue
     background-color: #BD49D2
 
 .advantage
+    &__head
+        position: relative
+        background: url('../img/advantage-bg.jpg') no-repeat
+        background-size: cover
+        background-position-y: top
+        height: 50%
+        @media ( max-width: 1300px )
+            height: 370px
+        @media ( max-width: 1200px )
+            height: 350px
+        @media ( max-width: 1100px )
+            height: 300px
+        @media ( max-width: 950px )
+            height: 250px
     &__content
         font-size: 1rem
-        width: 100%
+        height: 50%
         padding: 3.125em
-        position: absolute
-        top: 50%
-        bottom: 0
         background-color: #ffffff
         display: flex
         flex-direction: column
         justify-content: space-around
         @media ( max-width: 1740px )
             font-size: 0.5rem
-        @media ( max-width: 1300px )
-            position: relative
-            background-color: transparent 
-            padding-top: 230px
     &__title
         position: absolute
-        top: -50%
+        top: 50%
         transform: translateY(-50%)
-        right: 50%
-        transform: translateX(50%)
+        left: 50%
+        transform: translateX(-50%)
         font-size: 2.3rem
         color: rgb(255, 255, 255)
-        line-height: 0.741
+        line-height: 1
+        text-align: center
         letter-spacing: 0.27em
         text-transform: uppercase
         font-weight: 300
         color: #ffffff
         background-color: #fc961d
         padding: 0.4em 0.4em 0.27em 0.675em
+        width: fit-content
         @media ( max-width: 1660px )
             font-size: 1.8rem
         @media ( max-width: 1300px )
-            font-size: 1.5rem
-        @media ( max-width: 1090px )
+            font-size: 1.7rem
+        @media ( max-width: 860px )
             font-size: 1.3rem
-        @media ( max-width: 1300px )
-            position: relative
-            margin: 0 auto
-            margin-bottom: 150px
-            right: 0
-            transform: translateY(0%)
-        @media ( max-width: 1150px )
-            margin-bottom: 100px
-        @media ( max-width: 1050px )
-            margin-bottom: 50px
+        @media ( max-width: 740px )
+            font-size: 1.2rem
+        @media ( max-width: 435px )
+            top: 42%
     &__list 
         display: flex
         flex-wrap: wrap
@@ -111,11 +111,21 @@
                 font-size: 0.70rem
             @media ( max-width: 1200px )
                 font-size: 0.9rem
+            @media ( max-width: 1100px )
+                font-size: 0.7rem
+            @media ( max-width: 440px )
+                font-size: 0.6rem
+            @media ( max-width: 380px )
+                font-size: 0.5rem
         @media ( max-width: 1740px )
             font-size: 0.75rem
         @media ( max-width: 1360px )
             font-size: 0.65rem
-        // @media ( max-width: 1200px )
-        //     font-size: 0.55rem
         @media ( max-width: 1300px )
             font-size: 0.85rem
+        @media ( max-width: 520px )
+            font-size: 0.7rem
+        @media ( max-width: 440px )
+            font-size: 0.6rem
+        @media ( max-width: 380px )
+            font-size: 0.5rem
