--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -22,9 +22,12 @@
             font-size: 0.7rem
         @media ( max-width: 980px )
             width: 100%
+            padding-bottom: 0
         @media ( max-width: 767px )
             padding-bottom: 0
             padding-top: 8em
+            padding-right: 1.75em 
+            padding-left: 1.755em
     &__title
         position: absolute
         top: 1.8em
@@ -41,10 +44,10 @@
         @media ( max-width: 1430px )
             font-size: 2rem
         @media ( max-width: 767px )
-            top: 2em
-            right: 50%
-            transform: translateX(50%)
             font-size: 1.5rem
+        @media ( max-width: 980px )
+            left: 0
+            right: inherit
         @media ( max-width: 740px )
             font-size: 1.2rem
     &__text 
