--- a/src/sass/templates/_company.sass
+++ b/src/sass/templates/_company.sass
@@ -33,6 +33,7 @@
         top: 1.8em
         right: 0
         font-size: 2.3rem
+        text-align: center
         color: rgb(255, 255, 255)
         line-height: 0.741
         letter-spacing: 0.27em
@@ -48,6 +49,8 @@
         @media ( max-width: 980px )
             left: 0
             right: inherit
+        @media ( max-width: 860px )
+            width: 100%
         @media ( max-width: 740px )
             font-size: 1.2rem
     &__text 
