--- a/src/sass/_interface.sass
+++ b/src/sass/_interface.sass
@@ -31,15 +31,84 @@
     @media ( min-width: 1500px )
         font-size: 1.3rem
 
+.main
+    &__nav
+        z-index: 2
+        font-size: 1rem
+        position: absolute
+        top: 4em
+        right: 4em
+        display: flex
+        align-items: center
+        @media ( max-width: 1400px ) 
+            font-size: 0.8rem
+    &__phone 
+        margin-right: 20px
+        display: flex
+        flex-direction: column
+        @media ( max-width: 600px ) 
+            display: none
+    &__link
+        font-size: 1.2rem
+        margin-right: 50px
+        position: relative
+        color: #ffffff
+        letter-spacing: 3px
+        &::before
+            content: ''
+            font-size: 1rem
+            position: absolute
+            top: 2px
+            left: -1.5em
+            background: url('../img/smartphone-main.svg') no-repeat
+            background-size: cover
+            width: 1.3em
+            height: 1.3em
+            @media ( max-width: 1400px )
+                font-size: 0.8rem
+        &:hover
+            color: #dddddd
+
+.lang__list 
+    display: flex
+
+.lang__link 
+    font-weight: bold
+    color: #ffffff
+    margin-left: 35px
+
+.lang__link.rus 
+    position: relative
+    &::after
+        content: ''
+        position: absolute
+        top: -4px
+        left: -25px
+        width: 20px
+        height: 20px
+        background: url('../img/rus.svg') no-repeat
+        background-size: cover
+.lang__link.eng
+    position: relative
+    &::after
+        content: ''
+        position: absolute
+        top: -4px
+        left: -25px
+        width: 20px
+        height: 20px
+        background: url('../img/eng.svg') no-repeat
+        background-size: cover
+
 .form
     width: 100%
     &__title
-        margin-bottom: 10px
+        margin-bottom: 30px
         color: rgba(0,0,0,0.55)
-        font-size: 1.3rem
+        font-size: 1.2rem
         text-align: center
         font-weight: 300
-        letter-spacing: 5px
+        letter-spacing: 3px
         line-height: 1.2
         text-transform: uppercase
         @media ( max-width: 1400px )
@@ -73,12 +142,12 @@
     &-details
         display: none
         z-index: 1000
-        position: absolute
+        position: fixed
         width: 100%
         height: 100%
         top: 0
         left: 0
-        background-color: rgba(0,0,0,0.5)
+        background-color: rgba(0,0,0,0.6)
         padding: 20px
         overflow: auto
         &__wrapper
@@ -94,8 +163,8 @@
             background-color: #ffffff
         &__close
             position: absolute
-            top: -8px
-            right: -60px
+            top: -50px
+            right: -15px
             font-size: 50px
             line-height: 30px
             color: #ffffff
@@ -131,10 +200,11 @@
                 margin-bottom: 0.5em
                 font-weight: bold
         &__btn
+            margin: 0 auto
             font-size: 1rem
             cursor: pointer
             display: block
-            padding: 0.9em 1.4em
+            padding: 1em 2em
             border: none
             background-color: #fc961d
             color: #ffffff
@@ -148,7 +218,7 @@
     &-order
         display: none
         z-index: 1000
-        position: absolute
+        position: fixed
         width: 100%
         height: 100%
         top: 0
@@ -169,8 +239,8 @@
             background-color: #ffffff
         &__close
             position: absolute
-            top: -8px
-            right: -60px
+            top: -50px
+            right: -15px
             font-size: 50px
             line-height: 30px
             color: #ffffff
