--- a/src/sass/templates/_catalog.sass
+++ b/src/sass/templates/_catalog.sass
@@ -74,6 +74,7 @@
             font-size: 2rem
         @media ( max-width: 830px )
             font-size: 1.5rem
+            width: 100%
         @media ( max-width: 740px )
             font-size: 1.2rem
     &__list
