--- a/src/sass/templates/_retail.sass
+++ b/src/sass/templates/_retail.sass
@@ -74,8 +74,9 @@
             height: 350px
         @media ( max-width: 1100px )
             height: 300px
-        @media ( max-width: 950px )
-            height: 250px
+        @media ( max-width: 980px )
+            background: none
+            height: 100px
     &__list 
         display: flex
         justify-content: center
@@ -114,12 +115,16 @@
             font-size: 1.8rem
         @media ( max-width: 1300px )
             font-size: 1.7rem
+        @media ( max-width: 980px )
+            left: 0
+            transform: translateX(0%)
         @media ( max-width: 860px )
             font-size: 1.3rem
+            width: 100%
         @media ( max-width: 740px )
             font-size: 1.2rem
-        @media ( max-width: 350px )
-            top: 42%
+        @media ( max-width: 550px )
+            top: 45%
 
 .retail-slider .slick-list 
     width: 85%
