--- a/src/sass/templates/_technology.sass
+++ b/src/sass/templates/_technology.sass
@@ -25,6 +25,7 @@
         @media ( max-width: 980px )
             margin-left: 0
             width: 100%
+            padding-bottom: 0
         @media ( max-width: 767px )
             padding-top: 8em
             padding-right: 1.75em 
@@ -34,6 +35,7 @@
         top: 1.8em
         left: 0
         font-size: 2.3rem
+        text-align: center
         color: rgb(255, 255, 255)
         line-height: 0.741
         letter-spacing: 0.27em
@@ -44,6 +46,8 @@
         padding: 0.4em 0.4em 0.27em 0.675em
         @media ( max-width: 1430px )
             font-size: 2rem
+        @media ( max-width: 860px )
+            width: 100%
         @media ( max-width: 767px )
             font-size: 1.5rem
         @media ( max-width: 740px )
