--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -12,9 +12,11 @@
     justify-content: center
     align-items: center
     &__body 
-        width: 35em
+        width: 50em
         img 
             width: 100%
+        @media (max-width: 380px)
+            width: 40em
     @media ( max-width: 1430px )
         font-size: 0.7rem
     @media ( max-width: 910px )
