--- a/src/sass/templates/_nav.scss
+++ b/src/sass/templates/_nav.scss
@@ -25,6 +25,41 @@
         left: -100%;
     }
 }
+
+.nav__phone {
+    padding-left: 15px;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nav__link {
+    font-size: 1.2rem;
+    position: relative;
+    color: #ffffff;
+    letter-spacing: 3px;
+    margin-bottom: 1.042em;
+    @media (max-width: 380px) {
+        font-size: 0.8rem;
+    }
+}
+.nav__link::before {
+    content: "";
+    font-size: 1rem;
+    position: absolute;
+    top: 2px;
+    left: -1.5em;
+    background: url("../img/smartphone-main.svg") no-repeat;
+    background-size: cover;
+    width: 1.3em;
+    height: 1.3em;
+}
+@media (max-width: 380px) {
+    .nav__link::before {
+        font-size: 0.7rem;
+    }
+}
   
 .nav.expanded {
     left: 0; 
