--- a/src/sass/templates/_advantage.sass
+++ b/src/sass/templates/_advantage.sass
@@ -29,6 +29,8 @@
         justify-content: space-around
         @media ( max-width: 1740px )
             font-size: 0.5rem
+        @media ( max-width: 400px )
+            padding: 2.125em
     &__title
         position: absolute
         top: 50%
@@ -123,7 +125,7 @@
             @media ( max-width: 440px )
                 font-size: 0.6rem
             @media ( max-width: 380px )
-                font-size: 0.5rem
+                font-size: 0.6rem
         @media ( max-width: 1740px )
             font-size: 0.75rem
         @media ( max-width: 1360px )
