--- a/src/sass/templates/_contacts.sass
+++ b/src/sass/templates/_contacts.sass
@@ -60,15 +60,18 @@
         img 
             width: 100%
         @media ( max-width: 1400px )
-            font-size: 0.8rem
+            font-size: 0.7rem
         @media ( max-width: 470px )
             width: 100%
         .form 
             padding: 25px
             border: 1px solid #fc961d
         .form__tel, .form__name
-            padding: 1em 1.5em
+            font-size: 1rem
+            padding: 0.9em 1.5em
             margin-bottom: 1.5em
+            @media ( max-width: 1400px )
+                font-size: 0.7rem
     &__info
         padding-left: 40px
     &__address
@@ -94,7 +97,7 @@
             letter-spacing: 3px
             line-height: 1.2
             @media ( max-width: 1400px )
-                font-size: 0.85rem
+                font-size: 0.8rem
     &__tel
         position: relative
         padding-bottom: 20px
@@ -120,7 +123,7 @@
             &:hover
                 border-bottom: 1px solid #fc961d
         @media ( max-width: 1400px )
-            font-size: 0.85rem
+            font-size: 0.80rem
     &__email
         position: relative
         font-style: normal
@@ -146,11 +149,14 @@
             &:hover
                 border-bottom: 1px solid #fc961d
         @media ( max-width: 1400px )
-            font-size: 0.85rem
+            font-size: 0.8rem
     &__logo
-        margin-top: 50px
+        font-size: 1rem
+        margin-top: 3.125em
         width: 40%
         img 
             width: 100%
         @media ( max-width: 767px )
             width: 50%
+        @media ( max-width: 1400px )
+            font-size: 0.7rem
